# github-checker

./: .gitignore  README.md  main.py  pyproject.toml  repos.toml  repos.toml.example
contracts/snapshot/v1/: snapshot.schema.json
contracts/snapshot/v1/fixtures/: snapshot_degraded.json  snapshot_full.json
docs/superpowers/plans/: 2026-07-05-github-checker-tui.md  2026-07-05-rulesets-management.md  2026-07-07-local-repo-sync.md  2026-07-07-set-local-path-tui.md  2026-07-17-propose-pr.md
docs/superpowers/specs/: 2026-07-05-github-checker-tui-design.md  2026-07-05-rulesets-management-design.md  2026-07-07-local-repo-sync-design.md  2026-07-07-set-local-path-tui-design.md  2026-07-17-propose-pr-design.md
github_checker/: __init__.py  actions.py  app.py  config.py  github.py  localgit.py  main.py  models.py  propose.py  protection.py  snapshot.py
tests/: fixtures.py  test_actions.py  test_app.py  test_config.py  test_fetch.py  test_localgit.py  test_main.py  test_models.py  test_parsers.py  test_propose.py  test_protection.py  test_rulesets_ops.py  test_snapshot.py  test_snapshot_contract.py
