[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "textual>=8.2.8",
    "tomli-w>=1.2.0",
]

[project.scripts]
github-checker = "github_checker.main:main"

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
